--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/mobile-bg.jpg);
+    url(../images/background/mobile-bg.jpg);
   padding-top: 72px;
   padding-bottom: 72px;
   background-repeat: no-repeat;
@@ -804,7 +804,7 @@ img {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/mobile-bg@2x.jpg);
+      url(../images/background/mobile-bg@2x.jpg);
   }
 }
 
@@ -886,7 +886,7 @@ img {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/tablet-bg.jpg);
+      url(../images/background/tablet-bg.jpg);
     padding: 112px 0;
   }
 
@@ -1000,6 +1000,18 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) and (min-resolution: 192dpi),
+  screen and (min-width: 768px) and (min-resolution: 2dppx),
+  screen and (min-width: 768px) and (min-device-pixel-raito: 2) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/background/tablet-bg@2x.jpg);
+  }
+}
+
 @media (min-width: 1158px) {
   .container {
     max-width: 1158px;
@@ -1078,5 +1090,17 @@ img {
   }
   .page-info {
     margin-right: 40px;
+  }
+}
+
+@media screen and (min-width: 1158px) and (min-resolution: 192dpi),
+  screen and (min-width: 1158px) and (min-resolution: 2dppx),
+  screen and (min-width: 1158px) and (min-device-pixel-raito: 2) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/background/background@2x.jpg);
   }
 }
