--- a/css/styles.css
+++ b/css/styles.css
@@ -808,6 +808,29 @@ img {
   }
 }
 
+@media (min-width: 321px) {
+  .hero {
+    max-width: 768px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/background/tablet-bg.jpg);
+  }
+}
+
+@media screen and (min-width: 321px) and (min-resolution: 192dpi),
+  screen and (min-width: 321px) and (min-resolution: 2dppx),
+  screen and (min-width: 321px) and (min-device-pixel-raito: 2) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/background/tablet-bg@2x.jpg);
+  }
+}
+
 /* Tablet */
 
 @media (min-width: 768px) {
@@ -879,14 +902,7 @@ img {
   }
 
   /* Tablet hero */
-
   .hero {
-    max-width: 768px;
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/background/tablet-bg.jpg);
     padding: 112px 0;
   }
 
@@ -904,6 +920,7 @@ img {
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 24px;
+    row-gap: 72px;
   }
 
   .benefits-icon {
@@ -929,6 +946,7 @@ img {
     justify-content: center;
     flex-wrap: wrap;
     gap: 24px;
+    row-gap: 64px;
   }
 
   .team-item {
@@ -941,6 +959,7 @@ img {
     flex-wrap: wrap;
     justify-content: center;
     gap: 24px;
+    row-gap: 72px;
   }
 
   .case-item {
@@ -954,10 +973,11 @@ img {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: left;
-    align-items: baseline;
+    align-items: left;
     gap: 24px;
-    padding-left: 108px;
+    width: 584px;
   }
+
   .page-info {
     display: block;
   }
@@ -1001,15 +1021,26 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) and (min-resolution: 192dpi),
-  screen and (min-width: 768px) and (min-resolution: 2dppx),
-  screen and (min-width: 768px) and (min-device-pixel-raito: 2) {
+@media (min-width: 769px) {
+  .hero {
+    max-width: 1440px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/background/background.jpg);
+  }
+}
+
+@media screen and (min-width: 769px) and (min-resolution: 192dpi),
+  screen and (min-width: 769px) and (min-resolution: 2dppx),
+  screen and (min-width: 769px) and (min-device-pixel-raito: 2) {
   .hero {
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/background/tablet-bg@2x.jpg);
+      url(../images/background/background@2x.jpg);
   }
 }
 
@@ -1038,12 +1069,6 @@ img {
   /* Desctop hero */
 
   .hero {
-    max-width: 1440px;
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/background/background.jpg);
     padding: 188px 0;
   }
 
@@ -1080,6 +1105,9 @@ img {
   }
 
   /* Desctop case */
+  .case-list {
+    row-gap: 48px;
+  }
 
   .case-item {
     width: calc((100%-24px) / 3);
@@ -1087,21 +1115,22 @@ img {
 
   /* Desctop footer */
   .footer-container {
-    gap: 80px;
+    width: 1158px;
+    gap: 0;
   }
-  .page-info {
-    margin-right: 40px;
-  }
-}
 
-@media screen and (min-width: 1158px) and (min-resolution: 192dpi),
-  screen and (min-width: 1158px) and (min-resolution: 2dppx),
-  screen and (min-width: 1158px) and (min-device-pixel-raito: 2) {
-  .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/background/background@2x.jpg);
+  .page-info {
+    margin-right: 120px;
+  }
+
+  .page-subscribe {
+    margin-left: 80px;
+  }
+
+  /* Desctop modal */
+
+  .modal {
+    padding-right: 24px;
+    padding-left: 24px;
   }
 }
